# tket

./: build-without-conan.md  conan.cmake  libver
.github/workflows/: build-external-packages  build-without-conan.yml  build_and_test.yml  build_libs.yml  build_macos_m1_wheel  build_macos_wheel  conan-setup  conan2-test.yml  coverage.yml  docker-m1.yml  full-test-run.yml  get_lib_build_folder  linuxbuildlib  linuxbuildpackages  linuxbuildwheel  linuxtestwheel  packages.yml  release.yml  test-boost-upgrade.yml  test_libs.yml  test_libs_all.yml  test_libs_all_conan2.yml  upload-lib.yml  valgrind.yml
.github/workflows/scripts/: build-install-test-tket
conan-profiles/: macos-armv8-clang14
libs/: README.md
libs/tkassert/: CMakeLists.txt  conanfile.py
libs/tkassert/test/: conanfile.py
libs/tkassert/test_package/: conanfile.py
libs/tklog/: CMakeLists.txt  conanfile.py
libs/tklog/test/: conanfile.py
libs/tklog/test_package/: conanfile.py
libs/tkrng/: CMakeLists.txt  conanfile.py
libs/tkrng/test/: conanfile.py
libs/tkrng/test_package/: conanfile.py
libs/tktokenswap/: CMakeLists.txt  conanfile.py
libs/tktokenswap/test/: conanfile.py
libs/tktokenswap/test_package/: conanfile.py
libs/tkwsm/: CMakeLists.txt  conanfile.py
libs/tkwsm/test/: conanfile.py
libs/tkwsm/test_package/: conanfile.py
pytket/: CMakeLists.txt  conanfile.py  conanfile.txt  leo.py  setup.py
pytket/binders/: mapping.cpp
pytket/binders/circuit/: main.cpp
pytket/binders/circuit/Circuit/: add_classical_op.cpp  main.cpp
pytket/binders/include/: add_gate.hpp  unit_downcast.hpp
pytket/binders/zx/: diagram.cpp
pytket/pytket/_tket/: circuit.pyi
pytket/pytket/backends/: backendinfo.py
pytket/pytket/circuit/: __init__.py
pytket/pytket/qasm/: qasm.py
pytket/tests/: Untitled.ipynb  Untitled1.ipynb  backendinfo_test.py  checkwasm.txt  circuit_test.py  classical_test.py  qasm_test.py  utils_test.py
pytket/tests/qasm_test_files/: test17.qasm  test17_output.qasm  test18_output.qasm
recipes/pybind11/: conanfile.py
recipes/tket/: conanfile.py
recipes/tket-proptests/: conanfile.py
recipes/tket-tests/: conanfile.py
tket/: CMakeLists.txt  conanfile.py
tket/proptest/: conanfile.py
tket/proptests/: CMakeLists.txt
tket/src/: CMakeLists.txt
tket/src/Circuit/: Circuit.cpp  CircuitJson.cpp  CommandJson.cpp  DAGProperties.cpp  basic_circ_manip.cpp  macro_circ_info.cpp  setters_and_getters.cpp
tket/src/Circuit/include/Circuit/: Circuit.hpp  Command.hpp
tket/src/Clifford/: UnitaryTableau.cpp
tket/src/Clifford/include/Clifford/: UnitaryTableau.hpp
tket/src/Converters/: PauliGraphConverters.cpp
tket/src/Gate/: OpPtrFunctions.cpp
tket/src/Mapping/: BoxDecomposition.cpp  LazyCliffordSynthesis.cpp  LazySynthesisAAS.cpp  LazySynthesisTableau.cpp  LexiLabelling.cpp  LexiRoute.cpp  LexiRouteRoutingMethod.cpp  LexicographicalComparison.cpp  MappingFrontier.cpp  MappingManager.cpp  MultiGateReorder.cpp  RoutingMethodCircuit.cpp
tket/src/Mapping/include/Mapping/: BoxDecomposition.hpp  LazyCliffordSynthesis.hpp  LazySynthesisAAS.hpp  LexiLabelling.hpp  LexiRoute.hpp  LexiRouteRoutingMethod.hpp  MappingFrontier.hpp  MultiGateReorder.hpp  RoutingMethod.hpp  RoutingMethodCircuit.hpp
tket/src/OpType/: OpTypeFunctions.cpp  OpTypeInfo.cpp  OpTypeJson.cpp
tket/src/OpType/include/OpType/: EdgeType.hpp
tket/src/Ops/: ClassicalOps.cpp  Op.cpp
tket/src/PauliGraph/: PauliGraph.cpp
tket/src/PauliGraph/include/PauliGraph/: PauliGraph.hpp
tket/src/Utils/: CMakeLists.txt  UnitID.cpp
tket/src/Utils/include/Utils/: UnitID.hpp
tket/src/WeightSubgrMono/: CMakeLists.txt  README.txt
tket/src/WeightSubgrMono/EndToEndWrappers/: MainSolver.cpp
tket/src/WeightSubgrMono/GraphTheoretic/: DomainInitialiser.cpp  GeneralStructs.cpp  NearNeighboursData.cpp  VertexRelabelling.cpp
tket/src/WeightSubgrMono/InitPlacement/: EndToEndIQP.cpp  FastRandomBits.cpp  InputStructs.cpp  MonteCarloCompleteTargetSolution.cpp  MonteCarloManager.cpp  PrunedTargetEdges.cpp  SolutionJumper.cpp  UtilsIQP.cpp
tket/src/WeightSubgrMono/Reducing/: DerivedGraphsReducer.cpp  DistancesReducer.cpp  HallSetReduction.cpp  NeighboursReducer.cpp  ReducerWrapper.cpp
tket/src/WeightSubgrMono/Searching/: DomainsAccessor.cpp  NodeListTraversal.cpp  NodesRawData.cpp  SearchBranch.cpp  ValueOrdering.cpp  VariableOrdering.cpp  WeightCalculator.cpp
tket/src/WeightSubgrMono/WeightPruning/: WeightChecker.cpp  WeightNogoodDetector.cpp
tket/src/WeightSubgrMono/include/WeightSubgrMono/Common/: TemporaryRefactorCode.hpp
tket/src/WeightSubgrMono/include/WeightSubgrMono/InitPlacement/: MonteCarloCompleteTargetSolution.hpp  MonteCarloManager.hpp  PrunedTargetEdges.hpp  README.txt  SolutionJumper.hpp  UtilsIQP.hpp
tket/src/WeightSubgrMono/include/WeightSubgrMono/Reducing/: HallSetReduction.hpp
tket/src/ZX/: Flow.cpp  ZXDManipulation.cpp  ZXRWDecompositions.cpp  ZXRWGraphLikeSimplification.cpp
tket/src/ZX/include/ZX/: Flow.hpp  Rewrite.hpp  ZXDiagram.hpp
tket/test/: conanfile.py
tket/test_package/: CMakeLists.txt
tket/tests/: CMakeLists.txt  test_BoxDecompRoutingMethod.cpp  test_LexiRoute.cpp  test_MappingFrontier.cpp  test_MappingManager.cpp  test_MultiGateReorder.cpp  test_PauliGraph.cpp  test_RoutingMethod.cpp  test_Synthesis.cpp  test_json.cpp  test_wasm.cpp  tkettestsfiles.cmake  tkettestutilsfiles.cmake
tket/tests/Circuit/: test_Circ.cpp
tket/tests/WeightSubgrMono/GraphTheoretic/: test_NeighboursData.cpp
tket/tests/WeightSubgrMono/InitPlacement/: PlacementCostModelInterface.cpp  PlacementCostModelInterface.hpp  TestUtilsIQP.cpp  TestWeightedGraphData.cpp  TestWeightedGraphData.hpp  WeightedBinaryTree.cpp  WeightedSquareGrid.cpp  test_InitialPlacementProblems.cpp  test_MonteCarloCompleteTargetSolution.cpp  test_PrunedTargetEdges.cpp  test_WeightedBinaryTree.cpp  test_WeightedSquareGrid.cpp
tket/tests/WeightSubgrMono/Searching/: test_NodesRawData.cpp  test_NodesRawDataTraversals.cpp
tket/tests/WeightSubgrMono/SolvingProblems/: test_RandomGraphs.cpp
tket/tests/ZX/: test_Flow.cpp
(+1 files in other folders)
